[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/models/pacman4.png" type="Texture" id=1]
[ext_resource path="res://PacManEnemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/models/pacman3.png" type="Texture" id=3]
[ext_resource path="res://Assets/models/pacman1.png" type="Texture" id=4]
[ext_resource path="res://Assets/models/pacman2.png" type="Texture" id=5]
[ext_resource path="res://Assets/models/pacman4.obj" type="ArrayMesh" id=6]
[ext_resource path="res://Assets/models/pacman3.obj" type="ArrayMesh" id=7]
[ext_resource path="res://Assets/models/pacman1.obj" type="ArrayMesh" id=8]
[ext_resource path="res://Assets/models/pacman2.obj" type="ArrayMesh" id=9]

[sub_resource type="SphereShape" id=1]
radius = 0.829496

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 5 )

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 3 )

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 1 )

[node name="PacManEnemy" type="KinematicBody"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.06503, 0.368665 )
shape = SubResource( 1 )

[node name="ChangeDirTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ActivationTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AnimTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Models" type="Spatial" parent="."]

[node name="MeshInstance1" type="MeshInstance" parent="Models"]
mesh = ExtResource( 8 )
material/0 = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="Models"]
mesh = ExtResource( 9 )
material/0 = SubResource( 3 )

[node name="MeshInstance3" type="MeshInstance" parent="Models"]
mesh = ExtResource( 7 )
material/0 = SubResource( 4 )

[node name="MeshInstance4" type="MeshInstance" parent="Models"]
mesh = ExtResource( 6 )
material/0 = SubResource( 5 )
[connection signal="timeout" from="ChangeDirTimer" to="." method="_on_ChangeDirTimer_timeout"]
[connection signal="timeout" from="ActivationTimer" to="." method="_on_ActivationTimer_timeout"]
[connection signal="timeout" from="AnimTimer" to="." method="_on_AnimTimer_timeout"]
